--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,14 @@
         <h2>Game Description</h2>
         <p>
             Push boxes, solve puzzles and shift the Balance! Push the boxes onto the targets. But be careful! Moving between the two game windows shifts the balance of the game.
+
+            <br><br>
+            I recommend adjusting the zoom level of your browser if the game is too small or doesn't fit your screen (for example using Ctrl +, Ctrl - or Ctrl + Scroll).
         </p>
+
+        <div style="display: flex; justify-content: center; margin: 24px 0;">
+            <img src="assets/balance.png" alt="Balance illustration" style="max-width: 50%; height: auto; border-radius: 8px;" />
+        </div>
 
         <h2>Context</h2>
         <p>
