Add source code link

--- a/src/index.html
+++ b/src/index.html
@@ -186,8 +186,13 @@
         <ul>
             <li>Music <b>BRAIN TEASER 3</b> by Eric Matyas - www.soundimage.org</li>
             <li>All the visuals and sound effects were created by me.</li>
+            <li>Code vibecoded with GitHub Copilot</li>
 
         </ul>
+        <h2>Source code</h2>
+        <p>
+            The source code is available on my GitHub: <a href="https://github.com/CASTEL-Florian/SplitPush-GameDevJs2025" target="_blank">CASTEL-Florian/SplitPush-GameDevJs2025</a>
+        </p>
     </div>
 
     <!-- Load your game bundle AFTER the containers exist -->
